  - "arm advance" menu buttons removed.  Next/previous buttons function as normal
    for turnpoints (including startpoints) not requiring arming, for those that do
    require arm, "next" reads and functions as "arm" on first press and once armed,
    reads and functions as "next".  "previous" reads and functions as "previous" if
    not armed, "disarm" if armed.

Version 6.0.7 - not yet released
* map
  - Airspace: support alternative OpenAir coordinate format
  - allow zooming in to 1 km
* replay: don't execute recorded input events
* Windows
  - hide the task bar on Windows CE Core
* Android
  - disable auto-restart on various Android configuration events
  - import time from internal GPS correctly
  - read internal GPS accuracy

Version 6.0.6 - 2011/03/04
* devices:
  - fix declaration crash in Volkslogger, EW, CAI302, CAI GPS NAV
  - EW: remove duplicate newline in declaration output
* map
  - Airspace: add option to re-enable stencil buffer on PPC2000
* other
  - select waypoint: update heading filter only on large changes
  - reduce dialog memory usage
* Windows
  - compile vali-xcs.exe as console application
* Android
  - fix crash due to invalid UTF-8 labels
  - more pause/resume crash fixes
  - take advantage of ARMv7 CPUs
  - dialogs are modal now
* Linux
  - implement the serial port

Version 6.0.5 - 2011/02/26
* devices:
  - EWMicroRecorder: fix hang during task declaration
  - FLARM: parse PGRMZ as altitude above 1013.25 hPa
* user interface
  - scale the "Today Screen" buttons on large screens
  - fix page numbers in satellite image renderer
  - generate satellite file name from original waypoint id
* map
  - terrain: permanently disable failed tiles
  - terrain: fix "unexpected marker segment type" error
  - AAT: don't draw "dead zone" on ancient hardware (PPC2000)
  - Airspace: disable stencil buffer on ancient hardware (PPC2000)
* Android
  - fix bitmap loading on Samsung Galaxy Tab
  - show Bluetooth device names in configuration dialog